tests/samples/invalid/address_of_constant.pn

const X: i32 = 0;
const ADDR: &i32 = &X;

fn foo()
{
	var addr: &i32 = &X;
}
